resources/rhobs/testing/telemeter-testing/infogw-data.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
    haproxy.router.openshift.io/balance: source
    haproxy.router.openshift.io/timeout: 5m
  name: infogw-data
spec:
  host: infogw-data.apps.rhobs-testing.qqzf.p1.openshiftapps.com
  port:
    targetPort: https
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: telemeter-token-refresher
    weight: 100
  wildcardPolicy: None
