resources/rhobs/testing/telemeter-testing/observatorium-thanos-querier-cache-testing.route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
    haproxy.router.openshift.io/timeout: "15m"
  labels:
    app: observatorium-querier-cache
  name: observatorium-thanos-querier-cache
spec:
  host: infogw-proxy.apps.rhobs-testing.qqzf.p1.openshiftapps.com
  port:
    targetPort: https
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: telemeter-token-refresher
    weight: 100
  wildcardPolicy: None
