resources/rhobs/testing/telemeter-testing/remote-write-proxy.route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    app.kubernetes.io/instance: remote-write-proxy
    app.kubernetes.io/name: nginx
    app.kubernetes.io/part-of: prometheus-ams
  name: remote-write-proxy
spec:
  host: remote-write-proxy-telemeter-testing.apps.rhobs-testing.qqzf.p1.openshiftapps.com
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: prometheus-ams-remote-write-proxy
    weight: 100
  wildcardPolicy: None
