resources/rhobs/testing/telemeter-testing/telemeter-server-upload.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
  name: telemeter-server-upload
spec:
  host: infogw.apps.rhobs-testing.qqzf.p1.openshiftapps.com
  path: /upload
  port:
    targetPort: external
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: telemeter-server
    weight: 100
  wildcardPolicy: None
